Adding manual turn entry into GUI and other small fixes