@@ -3,12 +3,15 @@ package application;
 
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
+import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 
 import clue.ClueFileWriter;
 import clue.ClueSolver;
@@ -19,21 +22,37 @@ import javafx.scene.Node;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.Button;
+import javafx.scene.control.ChoiceBox;
 import javafx.scene.control.Label;
+import javafx.scene.control.Spinner;
+import javafx.scene.control.SpinnerValueFactory;
 import javafx.scene.control.TextArea;
 import javafx.scene.control.TextField;
+import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.stage.Stage;
 
 public class HomeController {
 	private ClueSolver game;
 	
+	private PathInfo paths;
+	
 	@FXML private TextField turnsInput;
 	
 	@FXML private Label label1;
 	
-	@FXML private Button simulateButton;
+	@FXML private ChoiceBox<String> suspectChoice;
+	
+	@FXML private ChoiceBox<String> placeChoice;
+	
+	@FXML private ChoiceBox<String> weaponChoice;
+	
+	@FXML private Button suggestButton;
+	
+	@FXML private Button accuseButton;
 	
 	@FXML private Button gameStateButton;
+	
+	@FXML private Spinner<Integer> spinner1;
 	
 	
 	@FXML private TextArea textArea;
@@ -44,8 +63,84 @@ public class HomeController {
         textArea.setText(message);
     }
 	
-	public void initData(ClueSolver game) {
+	@FXML protected void suggest(ActionEvent event) {
+		String suspectName = suspectChoice.getValue();
+		String placeName = placeChoice.getValue();
+		String weaponName = weaponChoice.getValue();
+		
+		int suspect = -1;
+		int place = -1;
+		int weapon = -1;
+		for (int i = 0; i < ClueSolver.cardNames.length; i++) {
+			if (suspectName.equals(ClueSolver.cardNames[i])) {
+				suspect = i;
+			}
+			if (placeName.equals(ClueSolver.cardNames[i])) {
+				place = i;
+			}
+			if (weaponName.equals(ClueSolver.cardNames[i])) {
+				weapon = i;
+			}
+		}
+		
+		if (suspect != -1 && place != -1 && weapon != -1) {
+			game.enterPlayerTurn(suspect, place, weapon);
+			game.simulateOpenentTurns();
+			textArea.setText(game.getGameMessages());
+		}
+		
+	}
+	
+	@FXML protected void accuse(ActionEvent event) {
+		String suspectName = suspectChoice.getValue();
+		String placeName = placeChoice.getValue();
+		String weaponName = weaponChoice.getValue();
+		
+		int suspect = -1;
+		int place = -1;
+		int weapon = -1;
+		for (int i = 0; i < ClueSolver.cardNames.length; i++) {
+			if (suspectName.equals(ClueSolver.cardNames[i])) {
+				suspect = i;
+			}
+			if (placeName.equals(ClueSolver.cardNames[i])) {
+				place = i;
+			}
+			if (weaponName.equals(ClueSolver.cardNames[i])) {
+				weapon = i;
+			}
+		}
+		
+		if (suspect != -1 && place != -1 && weapon != -1) {
+			textArea.setText(game.accuse(suspect, place, weapon));
+		}
+	}
+	
+	public void initData(ClueSolver game, PathInfo paths) {
 		this.game = game;
+		this.paths = paths;
+		
+		for (int i = 0; i < game.getNumberSuspects(); i++) {
+			suspectChoice.getItems().add(ClueSolver.cardNames[i]);
+		}
+		suspectChoice.setValue(ClueSolver.cardNames[0]);
+		
+		for (int i = game.getNumberSuspects(); i < game.getNumberSuspects() + game.getNumberPlaces(); i++) {
+			placeChoice.getItems().add(ClueSolver.cardNames[i]);
+		}
+		placeChoice.setValue(ClueSolver.cardNames[game.getNumberSuspects()]);
+		
+		for (int i = game.getNumberSuspects() + game.getNumberPlaces(); i < game.getNumberSuspects() + game.getNumberPlaces() + game.getNumberWeapons(); i++) {
+			weaponChoice.getItems().add(ClueSolver.cardNames[i]);
+		}
+		weaponChoice.setValue(ClueSolver.cardNames[game.getNumberSuspects() + game.getNumberPlaces()]);
+		
+		
+		textArea.setText(game.getGameMessages());
+	}
+	
+	@FXML private void initialize() {
+		spinner1.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(1, 10, 1));
 	}
 	
 	@FXML protected void goToGameStateScene(ActionEvent event) throws IOException{
@@ -53,7 +148,7 @@ public class HomeController {
         loader.setLocation(getClass().getResource("GameState.fxml"));        
         Parent gameStateParent = loader.load();
         GameStateController controller = loader.getController();
-        controller.initData(game);
+        controller.initData(game, paths);
         
         Scene homeScene = new Scene(gameStateParent);
         Stage window = (Stage) ((Node)event.getSource()).getScene().getWindow();
@@ -65,7 +160,7 @@ public class HomeController {
         loader.setLocation(getClass().getResource("GameSolution.fxml"));        
         Parent gameStateParent = loader.load();
         GameSolutionController controller = loader.getController();
-        controller.initData(game);
+        controller.initData(game, paths);
         
         Scene homeScene = new Scene(gameStateParent);
         Stage window = (Stage) ((Node)event.getSource()).getScene().getWindow();
@@ -80,48 +175,111 @@ public class HomeController {
 		writer.write(content);
 		writer.flush();
 		writer.close();
-		
-//		ProcessBuilder builder = new ProcessBuilder("./wcsp -L ClueSolverInput >> ClueSoverOutput");
-//		builder.start();
-		textArea.setText("WCSP input data written to file called 'ClueSolverInput'");
+		int k = spinner1.getValue();
+		String command = "python3 " + paths.topK + " -L -K " + k + " -f ClueSolverInput -p " + paths.wcsp + " -O ClueSolverOutput"; 
+		try {
+			Process p = Runtime.getRuntime().exec(command);
+			BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
+			p.waitFor(180, TimeUnit.SECONDS);
+			String output = "";
+			String line = "";
+			while ( (line = in.readLine()) != null) {
+				output += line;
+			}
+			in.close();
+			textArea.setText(output);
+		} catch (Exception e) {
+			textArea.setText(e.getMessage());
+			return;
+		}
 
+		//System.out.println(output);
+		//textArea.setText("WCSP input data written to file called 'ClueSolverInput'");
 	}
 	
-	@FXML protected void readFromFile(ActionEvent event) throws IOException{
+	@FXML protected void readFromFile(ActionEvent event) {
 		BufferedReader reader;
-		reader = new BufferedReader(new FileReader("ClueSolverOutput"));
-		String line="";
-		while (!line.contains("ID")) {
-			line = reader.readLine();
-		}
-		int numberOfLines = (game.getNumberPlayers()+3)*21;
-		List<HashSet<Integer>> solutionData = new ArrayList<HashSet<Integer>>();
-		for (int i = 0; i < (game.getNumberPlayers()+3); i++) {
-			solutionData.add(new HashSet<Integer>());
+		List<List<HashSet<Integer>>> solutionData = new ArrayList<List<HashSet<Integer>>>();
+		try {
+			reader = new BufferedReader(new FileReader("ClueSolverOutput"));
+			while (true) {
+				String line="";
+				while (!line.contains("Weight")) {
+					line = reader.readLine();
+					if (line == null) {
+						break;
+					}
+				}
+				if (line == null) {
+					break;
+				}
+				int numberOfLines = (game.getNumberPlayers()+3)*21;
+				solutionData.add(new ArrayList<HashSet<Integer>>());
+				for (int i = 0; i < (game.getNumberPlayers()+3); i++) {
+					solutionData.get(solutionData.size()-1).add(new HashSet<Integer>());
+				}
+				for (int i = 0; i < numberOfLines; i++) {
+					line = reader.readLine();
+					String[] splitLine = line.split("\\s+");
+					if (splitLine[1].equals("1")) {
+						int varNumber = Integer.parseInt(splitLine[0]);
+						int cardNumber = varNumber / (game.getNumberPlayers()+3);
+						int location = varNumber - cardNumber*(game.getNumberPlayers()+3);
+						solutionData.get(solutionData.size()-1).get(location).add(cardNumber);
+					}
+				}
+			}
+			
+			reader.close();
+			
+		} catch (Exception e) {
+			textArea.setText(e.getMessage());
+			return;
 		}
 		
-		for (int i = 0; i < numberOfLines; i++) {
-			line = reader.readLine();
-			String[] splitLine = line.split("\\s+");
-			if (splitLine[1].equals("1")) {
-				int varNumber = Integer.parseInt(splitLine[0]);
-				int cardNumber = varNumber / (game.getNumberPlayers()+3);
-				int location = varNumber - cardNumber*(game.getNumberPlayers()+3);
-				solutionData.get(location).add(cardNumber);
-			}
-		}
 
-		reader.close();
+
+		/*
+		 * OLD CODE for top solution only
+		 */
+//		String line="";
+//		while (!line.contains("ID")) {
+//			line = reader.readLine();
+//		}
+//		int numberOfLines = (game.getNumberPlayers()+3)*21;
+//		List<HashSet<Integer>> solutionData = new ArrayList<HashSet<Integer>>();
+//		for (int i = 0; i < (game.getNumberPlayers()+3); i++) {
+//			solutionData.add(new HashSet<Integer>());
+//		}
+//		
+//		for (int i = 0; i < numberOfLines; i++) {
+//			line = reader.readLine();
+//			String[] splitLine = line.split("\\s+");
+//			if (splitLine[1].equals("1")) {
+//				int varNumber = Integer.parseInt(splitLine[0]);
+//				int cardNumber = varNumber / (game.getNumberPlayers()+3);
+//				int location = varNumber - cardNumber*(game.getNumberPlayers()+3);
+//				solutionData.get(location).add(cardNumber);
+//			}
+//		}
+
+		
 		
         FXMLLoader loader = new FXMLLoader();
         loader.setLocation(getClass().getResource("SolverSolution.fxml"));        
-        Parent gameStateParent = loader.load();
-        SolverSolutionController controller = loader.getController();
-        controller.initData(game, solutionData);
-        
-        Scene homeScene = new Scene(gameStateParent);
-        Stage window = (Stage) ((Node)event.getSource()).getScene().getWindow();
-        window.setScene(homeScene);
+        Parent gameStateParent;
+		try {
+			gameStateParent = loader.load();
+	        SolverSolutionController controller = loader.getController();
+	        controller.initData(game, solutionData, paths);
+	        
+	        Scene homeScene = new Scene(gameStateParent);
+	        Stage window = (Stage) ((Node)event.getSource()).getScene().getWindow();
+	        window.setScene(homeScene);
+		} catch (IOException e) {
+			textArea.setText(e.getMessage());
+		}
+
 	}
 
 }
